--- a/python/ray/train/BUILD.bazel
+++ b/python/ray/train/BUILD.bazel
@@ -355,7 +355,7 @@ py_test(
     env = {"RAY_TRAIN_V2_ENABLED": "1"},
     tags = [
         "exclusive",
-        "gpu_only",
+        "gpu",
         "team:ml",
     ],
     deps = [
@@ -403,7 +403,6 @@ py_test(
     env = {"RAY_TRAIN_V2_ENABLED": "0"},
     tags = [
         "exclusive",
-        "ray_air",
         "team:ml",
     ],
     deps = [
@@ -444,7 +443,6 @@ py_test(
     env = {"RAY_TRAIN_V2_ENABLED": "0"},
     tags = [
         "exclusive",
-        "ray_air",
         "team:ml",
     ],
     deps = [":train_lib"],
@@ -457,7 +455,6 @@ py_test(
     env = {"RAY_TRAIN_V2_ENABLED": "0"},
     tags = [
         "exclusive",
-        "ray_air",
         "team:ml",
     ],
     deps = [":train_lib"],
@@ -485,7 +482,7 @@ py_test(
     env = {"RAY_TRAIN_V2_ENABLED": "0"},
     tags = [
         "exclusive",
-        "gpu_only",
+        "gpu",
         "team:ml",
     ],
     deps = [
@@ -501,7 +498,7 @@ py_test(
     env = {"RAY_TRAIN_V2_ENABLED": "0"},
     tags = [
         "exclusive",
-        "gpu_only",
+        "gpu",
         "team:ml",
     ],
     deps = [
@@ -517,7 +514,7 @@ py_test(
     env = {"RAY_TRAIN_V2_ENABLED": "1"},
     tags = [
         "exclusive",
-        "gpu_only",
+        "gpu",
         "team:ml",
     ],
     deps = [
@@ -533,7 +530,7 @@ py_test(
     env = {"RAY_TRAIN_V2_ENABLED": "1"},
     tags = [
         "exclusive",
-        "gpu_only",
+        "gpu",
         "team:ml",
     ],
     deps = [
@@ -548,7 +545,7 @@ py_test(
     srcs = ["tests/test_gpu_examples.py"],
     tags = [
         "exclusive",
-        "gpu_only",
+        "gpu",
         "team:ml",
     ],
     deps = [
@@ -564,7 +561,7 @@ py_test(
     env = {"RAY_TRAIN_V2_ENABLED": "1"},
     tags = [
         "exclusive",
-        "gpu_only",
+        "gpu",
         "team:ml",
         "torch_1_11",
     ],
@@ -579,7 +576,6 @@ py_test(
     tags = [
         "exclusive",
         "manual",
-        "ray_air",
         "team:ml",
     ],
     deps = [":train_lib"],
@@ -592,7 +588,6 @@ py_test(
     env = {"RAY_TRAIN_V2_ENABLED": "1"},
     tags = [
         "exclusive",
-        "ray_air",
         "team:ml",
     ],
     deps = [
@@ -608,7 +603,6 @@ py_test(
     env = {"RAY_TRAIN_V2_ENABLED": "0"},
     tags = [
         "exclusive",
-        "ray_air",
         "team:ml",
     ],
     deps = [":train_lib"],
@@ -624,7 +618,6 @@ py_test(
         "exclusive",
         "gpu",
         "ptl_v2",
-        "ray_air",
         "team:ml",
     ],
     deps = [":train_lib"],
@@ -639,7 +632,6 @@ py_test(
     tags = [
         "exclusive",
         "gpu",
-        "ray_air",
         "team:ml",
     ],
     deps = [":train_lib"],
@@ -734,7 +726,6 @@ py_test(
     env = {"RAY_TRAIN_V2_ENABLED": "1"},
     tags = [
         "exclusive",
-        "ray_air",
         "team:ml",
     ],
     deps = [":train_lib"],
@@ -836,7 +827,6 @@ py_test(
     tags = [
         "exclusive",
         "gpu",
-        "ray_air",
         "team:ml",
     ],
     deps = [
@@ -852,7 +842,6 @@ py_test(
     env = {"RAY_TRAIN_V2_ENABLED": "0"},
     tags = [
         "exclusive",
-        "ray_air",
         "team:ml",
     ],
     deps = [":train_lib"],
@@ -865,7 +854,6 @@ py_test(
     env = {"RAY_TRAIN_V2_ENABLED": "1"},
     tags = [
         "exclusive",
-        "ray_air",
         "team:ml",
     ],
     deps = [
@@ -882,7 +870,6 @@ py_test(
     tags = [
         "exclusive",
         "gpu",
-        "ray_air",
         "team:ml",
     ],
     deps = [
@@ -899,7 +886,6 @@ py_test(
     tags = [
         "exclusive",
         "gpu",
-        "ray_air",
         "team:ml",
     ],
     deps = [
@@ -916,8 +902,7 @@ py_test(
     env = {"RAY_TRAIN_V2_ENABLED": "0"},
     tags = [
         "exclusive",
-        "gpu_only",
-        "ray_air",
+        "gpu",
         "team:ml",
     ],
     deps = [
@@ -933,7 +918,6 @@ py_test(
     env = {"RAY_TRAIN_V2_ENABLED": "0"},
     tags = [
         "exclusive",
-        "ray_air",
         "team:ml",
     ],
     deps = [":train_lib"],
@@ -946,7 +930,6 @@ py_test(
     env = {"RAY_TRAIN_V2_ENABLED": "1"},
     tags = [
         "exclusive",
-        "ray_air",
         "team:ml",
     ],
     deps = [":train_lib"],
@@ -971,7 +954,6 @@ py_test(
     env = {"RAY_TRAIN_V2_ENABLED": "0"},
     tags = [
         "exclusive",
-        "ray_air",
         "team:ml",
     ],
     deps = [":train_lib"],
@@ -1037,7 +1019,6 @@ py_test(
     env = {"RAY_TRAIN_V2_ENABLED": "1"},
     tags = [
         "exclusive",
-        "ray_air",
         "team:ml",
     ],
     deps = [
@@ -1050,10 +1031,9 @@ py_test(
     name = "test_xgboost_trainer",
     size = "medium",
     srcs = ["tests/test_xgboost_trainer.py"],
-    env = {"RAY_TRAIN_V2_ENABLED": "1"},
+    env = {"RAY_TRAIN_V2_ENABLED": "0"},
     tags = [
         "exclusive",
-        "ray_air",
         "team:ml",
     ],
     deps = [":train_lib"],
@@ -1066,8 +1046,6 @@ py_test(
     env = {"RAY_TRAIN_V2_ENABLED": "0"},
     tags = [
         "exclusive",
-        "new_storage",
-        "ray_air",
         "team:ml",
     ],
     deps = [
